[gd_scene load_steps=3 format=2]

[ext_resource path="res://Storks.gd" type="Script" id=1]
[ext_resource path="res://assets/img/bg/04-1.png" type="Texture" id=2]

[node name="Storks" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="AudioWord" type="AudioStreamPlayer" parent="."]

[node name="TimerWord" type="Timer" parent="."]
wait_time = 5.0

[node name="Bg" type="Sprite" parent="."]
position = Vector2( 512.329, 317.527 )
scale = Vector2( 0.922221, 0.872955 )
texture = ExtResource( 2 )

[node name="TimerInitGame" type="Timer" parent="."]
wait_time = 20.0
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerWord" to="." method="_on_TimerWord_timeout"]
[connection signal="timeout" from="TimerInitGame" to="." method="_on_TimerInitGame_timeout"]
